--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,14 @@
     <string name="cmd_noise_reduction">Noise: Noise Reduction Mode</string>
     <string name="cmd_noise_ambient">Noise: Ambient Sound Mode</string>
     <string name="cmd_eq_normal">EQ: Normal</string>
-    <string name="cmd_eq_pop">EQ: POP</string>
+    <string name="cmd_eq_pop">EQ: Pop</string>
     <string name="cmd_eq_classical">EQ: Classical</string>
     <string name="cmd_eq_rock">EQ: Rock</string>
     <string name="cmd_game_on">Game Mode: ON</string>
     <string name="cmd_game_off">Game Mode: OFF</string>
+    <string name="cmd_ldac_off">LDAC: OFF</string>
+    <string name="cmd_ldac_48k">LDAC: 48kHz/44.1kHz</string>
+    <string name="cmd_ldac_96k">LDAC: 96kHz</string>
     <string name="cmd_poweroff">Poweroff</string>
 
     <string name="toast_no_bluetooth">Bluetooth adapter not found</string>
