--- a/Android/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Android/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,4 +19,7 @@
     <string name="cmd_ldac_off">LDAC: OFF</string>
     <string name="cmd_ldac_48k">LDAC: 48kHz/44.1kHz</string>
     <string name="cmd_ldac_96k">LDAC: 96kHz</string>
+    <string name="cmd_disconnect">断开连接</string>
+    <string name="cmd_factory_reset">恢复出厂设置</string>
+    <string name="cmd_re_pair">重新配对</string>
 </resources>
